<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informacao_01"
        app:layout_constraintBottom_toTopOf="@+id/et_id01"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="28dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_id01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:hint="@string/id_01"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="111dp" />

    <EditText
        android:id="@+id/et_id02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="69dp"
        android:hint="@string/id_02"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_id01"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:text="@string/comprar_cachorro"
        android:onClick="comprar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_id02"
        tools:ignore="MissingConstraints" />

    <Switch
        android:id="@+id/sw_amigavel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="72dp"
        android:text="@string/amigavel_crianca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:layout_width="227dp"
        android:layout_height="277dp"
        android:layout_marginTop="196dp"
        android:src="@drawable/dog1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="227dp"
        android:layout_height="277dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="196dp"
        android:src="@drawable/dog2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>